--- a/Calculator/app/src/main/res/layout/activity_calculator.xml
+++ b/Calculator/app/src/main/res/layout/activity_calculator.xml
@@ -4,41 +4,63 @@
     android:id="@+id/fullscreen_content"
     android:background="#0099cc" tools:context=".Calculator"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20sp">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
+
     <TextView android:text="@string/calculator"
         android:layout_width="fill_parent"
         android:textColor="#ff090331"
-        android:textSize="25dp"
-        android:padding="10dp"
+        android:textSize="30sp"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
+        android:paddingTop="30sp"
         android:gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
-    <TextView
+
+    <EditText
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        android:text="Opalqqqq"/>
+        android:layout_height="50sp"
+        android:padding="10sp"
+        android:id="@+id/FirstNumber"
+        android:hint="This number"
+        android:background="#ffc8ffdf"
+        android:inputType="numberDecimal" />
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
+    <TextView
+        android:layout_width="92dp"
+        android:layout_height="51dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="plus"
+        android:id="@+id/plus"
+        android:layout_gravity="center_horizontal" />
 
-            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/exit" />
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="50sp"
+        android:padding="10sp"
+        android:id="@+id/SecondNumber"
+        android:hint="This number"
+        android:layout_gravity="left|top"
+        android:background="#FFC8FFDF"
+        android:inputType="numberDecimal" />
 
-        </LinearLayout>
-    </FrameLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="is"
+        android:id="@+id/button"
+        android:layout_gravity="right|top" />
+
+
+    <TextView
+        android:layout_width="331dp"
+        android:layout_height="90dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Result"
+        android:id="@+id/textView3"
+        android:layout_gravity="left|center_vertical" />
+
 
 </LinearLayout>
