--- a/Calculator/app/src/main/res/layout/activity_calculator.xml
+++ b/Calculator/app/src/main/res/layout/activity_calculator.xml
@@ -25,7 +25,7 @@
         android:id="@+id/FirstNumber"
         android:hint="This number"
         android:background="#ffc8ffdf"
-        android:inputType="numberDecimal" />
+        android:inputType="number" />
 
 
     <TextView
@@ -44,14 +44,16 @@
         android:hint="This number"
         android:layout_gravity="left|top"
         android:background="#FFC8FFDF"
-        android:inputType="numberDecimal" />
+        android:inputType="number" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="is"
         android:id="@+id/button"
-        android:layout_gravity="right|top" />
+        android:layout_gravity="right|top"
+        android:nestedScrollingEnabled="true"
+        android:onClick="onButtonClick" />
 
 
     <TextView
@@ -59,7 +61,7 @@
         android:layout_height="90dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Result"
-        android:id="@+id/textView3"
+        android:id="@+id/Result"
         android:layout_gravity="left|center_vertical" />
 
 
